fixed the responsive alignment of the footer component

--- a/src/components/domains/Footer.css
+++ b/src/components/domains/Footer.css
@@ -61,6 +61,7 @@ footer {
   }
   .Footer .right-side {
     padding-top: 20px;
+    padding-right: 20px;
   }
 }
 
