--- a/src/components/domains/aboutComponent/ScrollingText.css
+++ b/src/components/domains/aboutComponent/ScrollingText.css
@@ -18,12 +18,12 @@
     margin-bottom: -75px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 769px) {
   .ScrollingText .scroll-text {
     font-size: 3.5rem;
-    line-height: 1;
+    line-height: 1.5;
     margin-top: 12px;
-    margin-bottom: -10px;
+    margin-bottom: -19px;
   }
 }
 @media (max-width: 576px) {
